crates/rome_formatter/tests/specs/prettier/range/directive.js.snap
---
source: crates/rome_formatter/tests/prettier_tests.rs
assertion_line: 83
expression: directive.js

---
# Input
```js
<<<PRETTIER_RANGE_START>>>'<<<PRETTIER_RANGE_END>>>aaa';
'bbb';

```

# Output
```js
<<<PRETTIER_RANGE_START>>>'<<<PRETTIER_RANGE_END>>>aaa'
"bbb";

```

# Errors
```
error[SyntaxError]: expected a statement but instead found '<<<PRETTIER_RANGE_START>>>'<<<PRETTIER_RANGE_END>>>aaa''
  ┌─ directive.js:1:1
  │
1 │ <<<PRETTIER_RANGE_START>>>'<<<PRETTIER_RANGE_END>>>aaa';
  │ ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Expected a statement here


```


